--- a/lib/views/general/_frontpage_how_it_works.html.erb
+++ b/lib/views/general/_frontpage_how_it_works.html.erb
@@ -15,13 +15,16 @@
       <br>
 
       <div class="hiw-content__steps">
+
+        <br>
+
         <ol class="steps__list row">
           <li>
             <div>
               <div class="step-circle">
                 <%= image_tag("icon_1.png") %>
               </div>
-              <p><%= _("Use this site to make your request for information – we'll show you how.") %></p>
+              <p><%= _("Search for the requested information") %></p>
             </div>
           </li>
           <li>
@@ -29,7 +32,7 @@
               <div class="step-circle">
                 <%= image_tag("icon_2.png") %>
               </div>
-              <p><%= _("We'll drop you an email as soon as your request gets a response.") %></p>
+              <p><%= _("Go through the authorities to select one") %></p>
             </div>
           </li>
           <li>
@@ -37,7 +40,7 @@
               <div class="step-circle">
                 <%= image_tag("icon_3.png") %>
               </div>
-              <p><%= _("We publish it all online. Great! Now you have your answer, and everybody else can access it too.") %></p>
+              <p><%= _("Fill out the application form") %></p>
             </div>
           </li>
           <li>
@@ -45,7 +48,7 @@
               <div class="step-circle">
                 <%= image_tag("icon_4.png") %>
               </div>
-              <p><%= _("We publish it all online. Great! Now you have your answer, and everybody else can access it too.") %></p>
+              <p><%= _("Classify the response") %></p>
             </div>
           </li>
         </ol>
