--- a/lib/views/general/_frontpage_the_ones_behind_it.html.erb
+++ b/lib/views/general/_frontpage_the_ones_behind_it.html.erb
@@ -1,14 +1,22 @@
 <div class="infromini-credit">
   <div>
-    <%= image_tag("onshor_logo.png",
+    <a href="http://onshor.org/" target="_">
+      <%= image_tag("onshor_logo.png",
                     :alt => "Onshor | Transparency & Accountability") %>
+    </a>
   </div>
+
   <div>
-    <%= image_tag("fsvc_logo.png",
+    <a href="https://www.fsvc.org/" target="_">
+      <%= image_tag("fsvc_logo.png",
                     :alt => "Financial Services Volunteer Corps (FSVC)") %>
+    </a>
   </div>
+
   <div>
-    <%= image_tag("atcp_logo.png",
+    <a href="http://atcp.org.tn/" target="_">
+      <%= image_tag("atcp_logo.png",
                     :alt => "Association Tunisienne Des Controleurs Publics (ATCP)") %>
+    </a>
   </div>
 </div>
