--- a/lib/views/general/_frontpage_the_ones_behind_it.html.erb
+++ b/lib/views/general/_frontpage_the_ones_behind_it.html.erb
@@ -1,4 +1,8 @@
 <div class="infromini-credit">
+  <h2 class="section-head"><%= _("Who is behind this?") %></h2>
+
+  <br>
+
   <div>
     <a href="http://onshor.org/" target="_">
       <%= image_tag("onshor_logo.png",
