--- a/app/assets/stylesheets/responsive/_header_layout.scss
+++ b/app/assets/stylesheets/responsive/_header_layout.scss
@@ -12,6 +12,7 @@
   // Hide menu items by default on mobile
   #logged_in_bar,
   #topnav,
+  #user_locale_switcher,
   #navigation_search {
     display:none;
   }
@@ -199,7 +200,9 @@
 }
 
 #navigation_search {
+  margin: 20px;
   @include respond-min( $main_menu-mobile_menu_cutoff ) {
+    margin: 0px;
     position: absolute;
     top: 2.2em;
     right: 0;
@@ -217,13 +220,17 @@
   input {
     @include grid-column($columns:10);
     margin-right: 0;
-    background: url(/assets/search.png) no-repeat scroll 12.5px 10px;
+    background: url(/assets/search.png) no-repeat scroll 10.5px 7px;
     background-color: rgba(0, 0, 0, 0);
     padding-left: 45px;
     background-color: #FFFFFF;
     @include lte-ie7 {
-      width: 10.063em;
+      width: 100%;
     }
+    margin-top: 10px !important;
+    height: 30px !important;
+    font-size: 0.85em !important;
+    border: none !important;
   }
 }
 
