--- a/app/assets/stylesheets/responsive/_header_layout.scss
+++ b/app/assets/stylesheets/responsive/_header_layout.scss
@@ -285,7 +285,7 @@
     .navigation {
       .logged-in-menu {
         position: absolute;
-        right: 0.935em; // line up with grid boundaries
+        //right: 0.935em; // line up with grid boundaries
         width: 275px;
         background-color: white;
         border-bottom-right-radius: 5px;
