--- a/lib/views/general/_frontpage_how_it_works.html.erb
+++ b/lib/views/general/_frontpage_how_it_works.html.erb
@@ -24,7 +24,10 @@
               <div class="step-circle">
                 <%= image_tag("icon_1.png") %>
               </div>
-              <p><%= _("Search for the requested information") %></p>
+ 	      <div class="steps__step-number" aria-hidden="true">
+                <p>1</p>
+              </div>
+              <p class="p_howitwork"><%= _("Search for the requested information") %></p>
             </div>
           </li>
           <li>
@@ -32,7 +35,10 @@
               <div class="step-circle">
                 <%= image_tag("icon_2.png") %>
               </div>
-              <p><%= _("Go through the authorities to select one") %></p>
+	      <div class="steps__step-number" aria-hidden="true">
+                <p>2</p>
+              </div>
+              <p class="p_howitwork"><%= _("Go through the authorities to select one") %></p>
             </div>
           </li>
           <li>
@@ -40,7 +46,10 @@
               <div class="step-circle">
                 <%= image_tag("icon_3.png") %>
               </div>
-              <p><%= _("Fill out the application form") %></p>
+	      <div class="steps__step-number" aria-hidden="true">
+                <p>3</p>
+              </div>
+              <p class="p_howitwork"><%= _("Fill out the application form") %></p>
             </div>
           </li>
           <li>
@@ -48,7 +57,10 @@
               <div class="step-circle">
                 <%= image_tag("icon_4.png") %>
               </div>
-              <p><%= _("Classify the response") %></p>
+	      <div class="steps__step-number" aria-hidden="true">
+                <p>4</p>
+              </div>
+              <p class="p_howitwork"><%= _("Classify the Response") %></p>
             </div>
           </li>
         </ol>
